@@ -1,3 +1,9 @@
+Mon Dec 22 17:43:35 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/fieldactions.py,xappy/searchconnection.py,
+	  xappy/unittests/field_groups.py: Add SearchResult.grouped_data()
+	  method, to return data grouped by FieldGroup.
+
 Mon Dec 22 15:20:13 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* libs/get_xapian.py: Use new xapian packages, which include
